# projet-c-detection-Clion

./: CMakeLists.txt  Cahier des Charges .docx  Etat_de_l_art.odt  Glossaire_XML_in_DOCX.docx  Guide_Utilisation_Office_Analyse.docx
Jeux_de_test/: Fichier_Securise.docx  Macro+liens+images+Audia.dotm  cahier_des_tests.txt  macro+liens+long_document.docx
Projet_Detection/: Projet_Detection.cbp  Projet_Detection.depend  Projet_Detection.layout  affichage.c  affichage.h  crea_struct.c  crea_struct.h  creation_info.c  creation_infos.h  main.c  mon_string.c  mon_string.h  structure.h
